--- a/ecomm_cart/package.json
+++ b/ecomm_cart/package.json
@@ -13,7 +13,8 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
-    "reactstrap": "^8.2.0"
+    "reactstrap": "^8.2.0",
+    "surge": "^0.21.3"
   },
   "scripts": {
     "start": "react-scripts start",
